@@ -1,7 +1,7 @@
 Package: DPQ
 Title: Density, Probability, Quantile ('DPQ') Computations
 Version: 0.5-9
-Date: 2024-08-20
+Date: 2024-08-22
 VersionNote: Last CRAN: 0.5-8 on 2023-11-30;  0.5-7 on 2023-11-03
 Authors@R: c(person("Martin","Maechler", role=c("aut","cre"),
                     email="maechler@stat.math.ethz.ch", comment = c(ORCID = "0000-0002-8685-9910"))
