@@ -104,7 +104,7 @@ export(
   ## , lbetaIhalf
   , algdiv # name as in TOMS 708 .. but really?
   , bpser  # name as in TOMS 708 -- version of pbeta()
-  , gam1, gamln1 # "  "   "
+  , gam1d, gamln1 # gam1() & gamln1() in TOMS 708
   , okLongDouble # as with valgrind, it does not work contrary to what .Machine says
 
   , dpsifn # R/psigamma-deriv.R
